--- a/as3.html
+++ b/as3.html
@@ -53,13 +53,12 @@
     </div>
 </div>
 
-<div id="sixth" class="container-fluid">
-</div>
+<div id="sixth" class="container-fluid sticky-top bg"></div>
 
-<div id="seventh" class="container-fluid"></div>
+<div id="seventh" class="container-fluid sticky-top bg"></div>
 
-<div id="eighth" class="container-fluid"></div>
+<div id="eighth" class="container-fluid sticky-top bg"></div>
 
-<div id="ninth" class="container-fluid"></div>
+<div id="ninth" class="container-fluid sticky-top bg"></div>
 
-<div id="footer" class="container-fluid"></div>
+<div id="footer" class="container-flui sticky-top bg"></div>
