--- a/as4.html
+++ b/as4.html
@@ -25,19 +25,8 @@
     </div>
 </div>
 
-<div id="outer" class="sticky-top">
-    <div id="horizontal-container">
-        <div id="statusbar"></div>
-    </div>
-</div>
-
-<div id="paragraph" style="height:100vh;background-color: black;" class="container-fluid">
-    <div class="row">
-        <div id="left" class="col-sm-4"></div>
-        <div id="right" class="col-sm-8">
-            <p> 利稻是個好美好美的地方。</p>
-            <p> 天氣好的時候，在走廊上就能看見滿天星星，我總是貪心地每天都抬頭看看，很幸運地親眼看見了銀河，還在流星墜落後許了願。日出總被層層疊疊的山巒擋住，但顏色漸變的天空、雲霧繚繞的遠山，還有籠罩在晨曦裡的紅色跑道，都美得讓人屏息，尤其喜歡窗外的雞啼、蟬鳴、鳥叫。
-            </p>
-        </div>
-    </div>
+<div style="min-height:1000vh">
+	<div class="sticky-top">
+		<div id="statusbar"></div>
+	</div>
 </div>
