--- a/finalproject.html
+++ b/finalproject.html
@@ -71,14 +71,14 @@
     <!-- Division 6 偏鄉孩子可能面臨哪些困境？-->
     <section class="division division6">
         <h2>偏鄉孩子可能面臨哪些困境？</h2>
-        <img style="padding-left:160px; padding-right:160px; display: block;" src="https://imgur.com/DVwEwpM.png" alt="家庭結構示意圖">
+        <img style="padding-left:160px; padding-right:160px; display: block; width: 100%; max-width: 800px;" src="https://imgur.com/DVwEwpM.png" alt="家庭結構示意圖">
         <div style="height: 460px">
           <h3 style="padding-left: 160px; padding-top: 64px; padding-right: 400">家庭結構難以支持學習</h3>
           <p-black style="padding-left: 0; padding-right: 160px">偏鄉地區的家庭結構多為單親、隔代撫養或新住民家庭，這些家庭通常因經濟壓力而無法為孩子提供足夠的陪伴與學習支持；家長多從事勞力密集型工作，長時間在外奔波，對孩子的學業關注與引導相對不足。<br><br>
             此外，偏鄉家庭普遍缺乏額外的學習資源，如課後輔導或補習，讓孩子在學業起跑線上便面臨劣勢，也因此更加凸顯「學校」與「教師」的重要性。</p-black>
       </div>
         
-      <img style="padding-left:160px; padding-right:160px; display: block;" src="https://imgur.com/Q6xZgJt.jpg" alt="教師資源示意圖">
+      <img style="padding-left:160px; padding-right:160px; display: block; width: 100%; max-width: 800px;" src="https://imgur.com/Q6xZgJt.jpg" alt="教師資源示意圖">
         <div style="height: 460px">
           <h3 style="padding-left: 160px; padding-top: 64px; padding-right: 400">教師資源不足、流動率高</h3>
           <p-black style="padding-left: 0; padding-right: 160px">由於偏鄉交通與生活機能的不便利，教師往往不願長期留任，甚至將偏鄉服務視為職涯過渡期，服務年限一滿即離開。這導致學生在學習過程中，需頻繁適應新老師與不同的教學方法，教學連續性與品質受到嚴重影響。<br><br>
@@ -155,7 +155,7 @@
     <!-- Footer -->
     <div class="footer">
       <p-black style="color: white; font-size: 14px; padding-left: 100px;">
-        網頁工程：王麗雅、蔡瑜軒<br>
+        網頁工程：王麗雅、鄭玉苓、蔡瑜軒<br>
         視覺設計：鄭玉苓、蔡瑜軒<br>
         文字撰寫：王麗雅、鄭玉苓、蔡瑜軒<br>
         攝影：鄭玉苓<br>
