--- a/finalproject.html
+++ b/finalproject.html
@@ -104,20 +104,21 @@
         <div style="margin: 0 auto; padding-left:200px; padding-right:200px;">
             <img style="display: block; width: 100%; max-width: 800px;" src="https://imgur.com/DVwEwpM.png"
                 alt="家庭結構示意圖">
-            <div style="height: 460px">
+            <div style="padding-top: 40px; padding-bottom: 60px;">
                 <h3 style="padding: 0;">家庭結構難以支持學習</h3>
                 <p-black
                     style="display: inline-block; position: static;  padding: 0;">偏鄉地區的家庭結構多為單親、隔代撫養或新住民家庭，這些家庭通常因經濟壓力而無法為孩子提供足夠的陪伴與學習支持；家長多從事勞力密集型工作，長時間在外奔波，對孩子的學業關注與引導相對不足。<br><br>
                     此外，偏鄉家庭普遍缺乏額外的學習資源，如課後輔導或補習，讓孩子在學業起跑線上便面臨劣勢，也因此更加凸顯「學校」與「教師」的重要性。</p-black>
             </div>
+        </div>
         <div style="margin: 0 auto; padding-left:200px; padding-right:200px;">
             <img style="display: block; width: 100%; max-width: 800px;" src="https://imgur.com/Q6xZgJt.jpg"
                 alt="教師資源示意圖">
-            <div style="height: 460px">
+            <div style="padding-top: 40px; padding-bottom: 60px;">
                 <h3 style="padding: 0;">教師資源不足、流動率高</h3>
                 <p-black
                     style="display: inline-block; position: static;  padding: 0;">由於偏鄉交通與生活機能的不便利，教師往往不願長期留任，甚至將偏鄉服務視為職涯過渡期，服務年限一滿即離開。這導致學生在學習過程中，需頻繁適應新老師與不同的教學方法，教學連續性與品質受到嚴重影響。<br><br>
-                        此外，教師不足也使現有教師需要身兼多職，身心負荷過重，難以專注於學生需求。這樣的不穩定性，讓偏鄉孩子在學習過程中缺乏穩定的引導與長期陪伴，學習信心逐漸降低。</p-black>
+                    此外，教師不足也使現有教師需要身兼多職，身心負荷過重，難以專注於學生需求。這樣的不穩定性，讓偏鄉孩子在學習過程中缺乏穩定的引導與長期陪伴，學習信心逐漸降低。</p-black>
             </div>
         </div>
     </section>
@@ -133,7 +134,7 @@
     </div>
     <!-- Division 8 「服務性社團」真能解決問題？-->
 
-    <div id="2aad37f2-46b6-4374-bf93-7eaa0b466b48" style="height: 6100px;"></div>
+    <div id="2aad37f2-46b6-4374-bf93-7eaa0b466b48" style="height: 6600px;"></div>
 
     <!-- Division 9 四、五章節銜接-->
     <div class="division"
@@ -186,8 +187,8 @@
                 某些出自善意的作為，確實可能帶來預期之外的負面影響，但我們始終相信，若能在過程中不斷反思、傾聽雙方的聲音，並且有意識地進行調整，這些初衷與心意定不會被白費。<br><br>
                 正如李同學所說，「我們不是去服務，而是走進彼此的生命。」偏鄉服務不僅僅是一場場活動，更是一次次真實的相遇與連結，讓彼此的人生多了一份溫暖與希望。或許，這才是偏鄉服務最深遠、最動人的價值所在。</p-black>
         </div>
-        <img style="max-width: 1000px; margin: 0 auto; display: block; width: 100%; "
-            src="https://imgur.com/qsNx4Vb.jpg" alt="反思">
+        <img style="max-width: 800px; margin: 0 auto; display: block; width: 100%; " src="https://imgur.com/qsNx4Vb.jpg"
+            alt="反思">
     </div>
 
 
@@ -196,7 +197,7 @@
     <!-- Footer -->
     <div class="footer">
         <p-black style="color: white; font-size: 14px; padding-left: 100px;">
-            網頁工程：王麗雅、蔡瑜軒<br>
+            網頁工程：王麗雅、鄭玉苓、蔡瑜軒<br>
             視覺設計：鄭玉苓、蔡瑜軒<br>
             文字撰寫：王麗雅、鄭玉苓、蔡瑜軒<br>
             攝影：鄭玉苓<br>
