--- a/finalproject.html
+++ b/finalproject.html
@@ -200,14 +200,13 @@
             網頁工程：王麗雅、鄭玉苓、蔡瑜軒<br>
             視覺設計：鄭玉苓、蔡瑜軒<br>
             文字撰寫：王麗雅、鄭玉苓、蔡瑜軒<br>
-            攝影：鄭玉苓<br>
             <br>
             照片提供：黃子耘、陳忠峻<br>
-            網路資源：大學社團博覽會照片（來自師大官網）、台大山服新武生活營照片（來自台大山服粉絲專頁）<br>
+            網路圖片來源：<a href="https://pr.ntnu.edu.tw/ntnunews/index.php?mode=data&id=21849">國立台灣師範大學官網</a>、<a href="https://www.facebook.com/ntuShanFu">台大山服臉書粉絲專頁</a><br>
             <br>
             參考資料來源：
-            <a href="https://osa_activity.ntu.edu.tw/">國立台灣大學課外活動指導組</a><br>
-            <a href="https://hdl.handle.net/11296/e6x454">https://hdl.handle.net/11296/e6x454</a><br>
+            <a href="https://osa_activity.ntu.edu.tw/">國立台灣大學課外活動指導組</a>、
+            <a href="https://hdl.handle.net/11296/e6x454">社會工作者對志願服務污染之認知與反思研究</a><br>
             Guttentag, D. A. (2009). The possible negative impacts of volunteer tourism. International journal of
             tourism
             research, 11(6), 537-551.<br>
