--- a/finalproject.html
+++ b/finalproject.html
@@ -34,7 +34,10 @@
     <!-- Division 1 標題及引言-->
     <div class="division"
         style="height: 200vh; background: url('https://imgur.com/9x5SR6E.jpg') no-repeat center/cover;">
-        <div class="overlay"></div>
+    <!-- 新增 GIF 動畫 -->
+        <img src="https://imgur.com/UygOiCM.gif" alt="Animated GIF"
+            style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 10;">
+            <div class="overlay"></div>
         <h1>當善意成為負擔<br>揭開偏鄉服務的矛盾與隱憂</h1>
         <p-white style="bottom: 10%;">
             許多人投入偏鄉服務，<br>
@@ -202,7 +205,8 @@
             文字撰寫：王麗雅、鄭玉苓、蔡瑜軒<br>
             <br>
             照片提供：黃子耘、陳忠峻<br>
-            網路圖片來源：<a href="https://pr.ntnu.edu.tw/ntnunews/index.php?mode=data&id=21849">國立台灣師範大學官網</a>、<a href="https://www.facebook.com/ntuShanFu">台大山服臉書粉絲專頁</a><br>
+            網路圖片來源：<a href="https://pr.ntnu.edu.tw/ntnunews/index.php?mode=data&id=21849">國立台灣師範大學官網</a>、<a
+                href="https://www.facebook.com/ntuShanFu">台大山服臉書粉絲專頁</a><br>
             <br>
             參考資料來源：
             <a href="https://osa_activity.ntu.edu.tw/">國立台灣大學課外活動指導組</a>、
