--- a/finalproject.html
+++ b/finalproject.html
@@ -78,6 +78,12 @@
                 style="padding-top: 120px; padding-left: 60px; padding-right: 80px;">近年來，每當走進大學社團博覽會現場，經常能看見眾多服務性社團正積極招生，顯示出不少大專院校學生十分有意願及心力投入在所謂的「服務性活動」。以國立台灣大學為例，以「偏鄉服務」為主軸的服務性社團便有將近
                 10 個，其他更不乏關注癌童、國際志工等各式服務性社團，目前校內總計約有 45 個服務性社團，可見該類型社團在校園中蓬勃發展。</p-black>
         </div>
+        <!-- 插入影片，定格在最後一幀 -->
+        <div style="text-align: center; padding: 20px;">
+            <video id="myVideo" width="800" height="auto" autoplay muted>
+                <source src="https://imgur.com/cw9THSD.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <div style="height:460px; padding-left: 80px; padding-right: 80px;">
             <p-black style="padding-top: 120px; padding-left: 60px; padding-right: 540px;">根據官方資料，教育部在民國 96 年 5 月 9
